turtleart.kerr40.Kerr40.scala.error
Compilation error:
Kerr40:6: error: unclosed string literal
"droite(45);avance(30);gauche(90);avance(30);droite(45);avance(30);leveCrayon();avance(30);baisseCrayon()
^Kerr40:10: error: unclosed string literal
  gauche(45);leveCrayon();recule(60);gauche(45);recule(30);droite(90);recule(30);gauche(45)"
                                                                                           ^Kerr40:6: error: illegal start of statement
"droite(45);avance(30);gauche(90);avance(30);droite(45);avance(30);leveCrayon();avance(30);baisseCrayon()
^Kerr40:10: error: ';' expected but something found.
  gauche(45);leveCrayon();recule(60);gauche(45);recule(30);droite(90);recule(30);gauche(45)"
                                                                                           ^